# ModBusRTU_MCU

./: .clangd  .gitignore  README.md  main.c
FreeModbus/: CMakeLists.txt
FreeModbus/FreeModbus_core/: mbconfig.h  mbfunc.h  mbrtu.h
FreeModbus/FreeModbus_core/src/: mb.c  mbrtu.c
FreeModbus/FreeModbus_port/: port.h
FreeModbus/FreeModbus_port/src/: portserial.c  porttimer.c
FreeModbus/User/src/: mb_user.c
ModBusRTU.mcc/: main.c
ModBusRTU.mcc/MB_User_Config/: MB_FunFactory.h  MB_User_Config.h
ModBusRTU.mcc/MB_User_Config/src/: MB_FuncFactory.c  MB_User_Config.c
ModBusRTU.mcc/Protool_Config/: Protool_Config.h
ModBusRTU.mcc/Protool_Config/src/: Protool_Config.c
ModBusRTU.mcc/driver/: Free_Mode.h  cleardata.h  encoder.c  encoder.h
ModBusRTU.mcc/driver/src/: Free_Mode.c  cleardata.c  encoder.c
ModBusRTU.mcc/mcc/: ModBusRTU.mc3  mcc-manifest-autosave.yml  mcc-manifest-generated-success.yml  mcc.vscode
ModBusRTU.mcc/mcc_generated_files/dee/src/: dee.c
ModBusRTU.mcc/mcc_generated_files/flash/: flash.h  flash_hardware.h  flash_interface.h  flash_types.h
ModBusRTU.mcc/mcc_generated_files/flash/src/: flash.c
ModBusRTU.mcc/mcc_generated_files/system/: clock.h  dmt.h  interrupt.h  interrupt_types.h  pins.h  reset.h  reset_types.h  system.h  system_types.h  traps.h  watchdog.h
ModBusRTU.mcc/mcc_generated_files/timer/: sccp1.h  sccp2.h  timer_interface.h
ModBusRTU.mcc/mcc_generated_files/uart/: uart1.h  uart_interface.h  uart_types.h
cmake/ModBusRTU_MCU/default/: CMakeLists.txt  CMakePresets.json  user.cmake
(+19 files in other folders)
